--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="apple-touch-icon" sizes="57x57" href="resource/icon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="resource/icon/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="resource/icon/apple-icon-72x72.png">
