--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta name="msapplication-TileColor" content="#33343C">
     <meta name="msapplication-TileImage" content="resource/icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#33343C">
+    <link rel="favicon" href="./favicon.ico">
     <title>랏바홀 레이드</title>
 </head>
 
