--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta name="theme-color" content="#33343C">
     <link rel="favicon" href="./favicon.ico">
     <title>랏바홀 레이드</title>
+    <script src="main.js"></script>
 </head>
 
 <body>
