--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="msapplication-TileImage" content="resource/icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#33343C">
     <link rel="favicon" href="https://dneifiend.github.io/LatBaHol/favicon.ico">
+    <link rel="shortcut icon" href="https://dneifiend.github.io/LatBaHol/favicon.ico">
     <title>랏바홀 레이드</title>
     <script src="main.js"></script>
 </head>
