--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko-KR">
 
 <head>
-    <!-- <base href="https://dneifiend.github.io/LatBaHol/"> -->
+    <base href="https://dneifiend.github.io/LatBaHol/">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
