change text bold

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           aria-label="Open navigation menu">menu</button>
       </section>
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-mid justify-content-center">
-        <span class="mdc-top-app-bar__title ">Page title</span>
+        <span class="mdc-top-app-bar__title ">랏바홀 레이드 목록</span>
       </section>
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
         <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button text-white-2"
