--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
       <section class="raind-list-info">
         <span class="text-color-highlight m2-s-e">LiereaG</span>
         <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">people</i><span class="text-white-2">×7</span>
-        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true" style="color:#424250 !important">notification_add</i>
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">notifications_off</i>
       </section>
-      
     </div>
 
 
@@ -86,24 +85,44 @@
       <section class="raind-list-info">
         <span class="text-color-highlight m2-s-e"></span>
         <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">people</i><span class="text-white-2">×7</span>
-        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">notification_add</i>
+        <i class="material-icons mdc-button__icon" aria-hidden="true">notification_add</i>
       </section>
-      
+    </div>
+
+    <div class="mdc-card raid-list list-me-not">
+      <section>
+        <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목밤 22시)</span>
+      </section>
+      <section class="raind-list-info">
+        <span class="text-color-highlight m2-s-e"></span>
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">people</i><span class="text-white-2">×7</span>
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">notifications_off</i>
+      </section>
+    </div>
+
+    <div class="mdc-card raid-list list-me-not complete">
+      <section>
+        <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목밤 22시)</span>
+      </section>
+      <section class="raind-list-info">
+        <span class="text-color-highlight m2-s-e"></span>
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">people</i><span class="text-white-2">×7</span>
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">notifications_off</i>
+      </section>
+    </div>
+
+    <div class="mdc-card raid-list list-me-not complete">
+      <section>
+        <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목밤 22시)</span>
+      </section>
+      <section class="raind-list-info">
+        <span class="text-color-highlight m2-s-e"></span>
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">people</i><span class="text-white-2">×7</span>
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">notifications_off</i>
+      </section>
     </div>
 
 
-    <div class="mdc-card raid-list list-me-not">
-      <!-- ... content ... -->
-      this is a card
-    </div>
-    <div class="mdc-card raid-list list-me-not">
-      <!-- ... content ... -->
-      this is a card
-    </div>
-    <div class="mdc-card raid-list list-me-not">
-      <!-- ... content ... -->
-      this is a card
-    </div>
 
   </main>
 
