init progress bar

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   
   <link rel="stylesheet" href="css/css.css">
   <script src="main.js"></script>
+  <script src="latBaHol.js"></script>
 
 </head>
 
@@ -63,7 +64,12 @@
     </div>
   </header>
   
+  
   <main class="mdc-top-app-bar--fixed-adjust">
+
+    <div id="progress-bar">
+        <section id="progress-bar-highlight"></section>
+    </div>
 
 
     <div class="mdc-card raid-list list-me">
@@ -121,6 +127,7 @@
         <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">notifications_off</i>
       </section>
     </div>
+
 
 
 
