--- a/index.html
+++ b/index.html
@@ -73,59 +73,59 @@
 
 
     <div class="mdc-card raid-list list-me">
-      <section>
+      <div>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목밤 22시)</span>
-      </section>
-      <section class="raind-list-info">
+      </div>
+      <div class="raind-list-info">
         <span class="text-color-highlight m2-s-e">LiereaG</span>
         <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">people</i><span class="text-white-2">×7</span>
-        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">notifications_off</i>
-      </section>
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">navigate_next</i>
+      </div>
     </div>
 
 
     <div class="mdc-card raid-list list-me-not">
-      <section>
+      <div>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목밤 22시)</span>
-      </section>
-      <section class="raind-list-info">
+      </div>
+      <div class="raind-list-info">
         <span class="text-color-highlight m2-s-e"></span>
         <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">people</i><span class="text-white-2">×7</span>
-        <i class="material-icons mdc-button__icon" aria-hidden="true">notification_add</i>
-      </section>
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">navigate_next</i>
+      </div>
     </div>
 
     <div class="mdc-card raid-list list-me-not">
-      <section>
+      <div>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목밤 22시)</span>
-      </section>
-      <section class="raind-list-info">
+      </div>
+      <div class="raind-list-info">
         <span class="text-color-highlight m2-s-e"></span>
         <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">people</i><span class="text-white-2">×7</span>
-        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">notifications_off</i>
-      </section>
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">navigate_next</i>
+      </div>
     </div>
 
     <div class="mdc-card raid-list list-me-not complete">
-      <section>
+      <div>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목밤 22시)</span>
-      </section>
-      <section class="raind-list-info">
+      </div>
+      <div class="raind-list-info">
         <span class="text-color-highlight m2-s-e"></span>
         <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">people</i><span class="text-white-2">×7</span>
-        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">notifications_off</i>
-      </section>
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">navigate_next</i>
+      </div>
     </div>
 
     <div class="mdc-card raid-list list-me-not complete">
-      <section>
+      <div>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목밤 22시)</span>
-      </section>
-      <section class="raind-list-info">
+      </div>
+      <div class="raind-list-info">
         <span class="text-color-highlight m2-s-e"></span>
         <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">people</i><span class="text-white-2">×7</span>
-        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">notifications_off</i>
-      </section>
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">navigate_next</i>
+      </div>
     </div>
 
 
@@ -137,16 +137,16 @@
 
 <script>
 
-  var MDCRipple = mdc.ripple.MDCRipple
-  var MDCTopAppBar = mdc.topAppBar.MDCTopAppBar
+//   var MDCRipple = mdc.ripple.MDCRipple
+//   var MDCTopAppBar = mdc.topAppBar.MDCTopAppBar
 
-  const topAppBarElement = document.querySelector('.mdc-top-app-bar');
-const topAppBar = new MDCTopAppBar(topAppBarElement);
+//   const topAppBarElement = document.querySelector('.mdc-top-app-bar');
+// const topAppBar = new MDCTopAppBar(topAppBarElement);
 
-  var selector = '.mdc-button, .mdc-icon-button, .mdc-card__primary-action .mdc-card';
-  var ripples = [].map.call(document.querySelectorAll(selector), function(el) {
-  return new MDCRipple(el);
-});
+//   var selector = '.mdc-button, .mdc-icon-button, .mdc-card__primary-action .mdc-card';
+//   var ripples = [].map.call(document.querySelectorAll(selector), function(el) {
+//   return new MDCRipple(el);
+// });
 
 
 </script>
