main menu icon color

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko-KR">
 
 <head>
-  <base href="https://dneifiend.github.io/LatBaHol/">
+  <!-- <base href="https://dneifiend.github.io/LatBaHol/"> -->
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,15 +51,15 @@
   <header class="mdc-top-app-bar mdc-top-app-bar--fixed bg-dark-1">
     <div class="mdc-top-app-bar__row">
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
-        <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button text-white-2"
+        <button class="material-icons mdc-top-app-bar__navigation-icon mdc-icon-button text-white-2-i"
           aria-label="Open navigation menu">menu</button>
       </section>
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-mid justify-content-center">
         <span class="mdc-top-app-bar__title ">랏바홀 레이드 목록</span>
       </section>
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-end" role="toolbar">
-        <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button text-white-2"
-          aria-label="filter_alt">filter_alt</button>
+        <button class="material-icons mdc-top-app-bar__action-item mdc-icon-button text-white-2-i"
+          aria-label="filter_alt" style="rgb(151, 151, 151) !important;">filter_alt</button>
       </section>
     </div>
   </header>
