--- a/index.html
+++ b/index.html
@@ -47,9 +47,7 @@
 
 <body>
 
-
-
-
+<div id="main-container">
   <header class="mdc-top-app-bar mdc-top-app-bar--fixed bg-dark-1">
     <div class="mdc-top-app-bar__row">
       <section class="mdc-top-app-bar__section mdc-top-app-bar__section--align-start">
@@ -93,7 +91,8 @@
 
 
     <div class="mdc-card raid-list list-me">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -103,9 +102,65 @@
       </div>
     </div>
 
+    <div class="raid-member-container unfold">
+      <div class="raid-member-list">
+
+
+        <div class="raid-member-simple me">
+          <div>
+            <span class="big user-name">레아</span>
+            <span class="char-name">(LiereaG)</span>
+          </div>
+          <div class="char-badge-container">
+            <span class="badge ilv">1540</span><span class="badge job heal">도화가❤</span>
+          </div>
+        </div>
+        <div class="raid-member-simple">
+          <div>
+            <span class="big user-name">드니프</span>
+            <span class="char-name">(Dneiff)</span>
+          </div>
+          <div class="char-badge-container">
+            <span class="badge ilv">1540</span><span class="badge job">디트</span>
+          </div>
+        </div>
+        <div class="raid-member-simple">
+          <div>
+            <span class="big user-name">엘시아</span>
+            <span class="char-name">(EccentricS)</span>
+          </div>
+          <div class="char-badge-container">
+            <span class="badge ilv">1540</span><span class="badge job">디트</span>
+          </div>
+        </div>
+        <div class="raid-member-simple">
+          <div>
+            <span class="big user-name">드니프</span>
+            <span class="char-name">(Dneiff)</span>
+          </div>
+          <div class="char-badge-container">
+            <span class="badge ilv">1540</span><span class="badge job">디트</span>
+          </div>
+        </div>
+        <div class="raid-member-simple">
+          <div>
+            <span class="big user-name">드니프</span>
+            <span class="char-name">(Dneiff)</span>
+          </div>
+          <div class="char-badge-container">
+            <span class="badge ilv">1540</span><span class="badge job">디트</span>
+          </div>
+        </div>
+
+
+      </div>
+
+    </div>
+
 
     <div class="mdc-card raid-list list-me-not">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_down</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -116,7 +171,8 @@
     </div>
 
     <div class="mdc-card raid-list list-me">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -127,7 +183,8 @@
     </div>
 
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -138,7 +195,8 @@
     </div>
 
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -149,7 +207,8 @@
     </div>
 
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -159,7 +218,8 @@
       </div>
     </div>
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -169,7 +229,8 @@
       </div>
     </div>
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -179,7 +240,8 @@
       </div>
     </div>
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -189,7 +251,8 @@
       </div>
     </div>
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -199,7 +262,8 @@
       </div>
     </div>
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -209,7 +273,8 @@
       </div>
     </div>
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -219,7 +284,8 @@
       </div>
     </div>
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -229,7 +295,8 @@
       </div>
     </div>
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -239,7 +306,8 @@
       </div>
     </div>
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -249,7 +317,8 @@
       </div>
     </div>
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -259,7 +328,8 @@
       </div>
     </div>
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -269,7 +339,8 @@
       </div>
     </div>
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
@@ -279,8 +350,9 @@
       </div>
     </div>
     <div class="mdc-card raid-list list-me-not complete">
-      <div>
-        <span class="raid-name">비아마지막</span><span class="raid-time text-white-2">(목 22)</span>
+      <div class="raid-name-container">
+        <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
+        <span class="raid-name">쿠크 마지막</span><span class="raid-time text-white-2">(목 22)</span>
       </div>
       <div class="raind-list-info">
         <span class="text-color-highlight m2-s-e"></span>
@@ -291,6 +363,10 @@
 
 
   </main>
+</div>
+
+
+  
 
 
 
@@ -298,4 +374,5 @@
 <script src="render.js"></script>
 <script src="latBaHol.js"></script>
 </body>
+
 </html>
