--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </section>
 
 
-  <main class="mdc-top-app-bar--fixed-adjust">
+  <main class="mdc-top-app-bar--fixed-adjust scroll">
 
 
     <div class="mdc-card raid-list list-me">
