--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <main class="mdc-top-app-bar--fixed-adjust scroll">
 
 
-    <div class="mdc-card raid-list list-me">
+    <div class="mdc-card raid-list list-me material-ripple">
       <div class="raid-name-container">
         <i class="material-icons mdc-button__icon text-white-2" aria-hidden="true">keyboard_arrow_up</i>
         <span class="raid-name">비아 하드</span><span class="raid-time text-white-2">(목 22)</span>
@@ -102,7 +102,7 @@
       </div>
     </div>
 
-    <div class="raid-member-container unfold">
+    <div class="raid-member-container ripple animate unfold">
       <div class="raid-member-list">
 
 
@@ -150,6 +150,10 @@
           <div class="char-badge-container">
             <span class="badge ilv">1540</span><span class="badge job">디트</span>
           </div>
+        </div>
+
+        <div class="complete-button-container">
+          <button class="mdc-button mdc-button--raised mdc-button--dense mdc-button--primary">완료</button>
         </div>
 
 
